[package]
name = "doapi"
version = "0.1.1"
authors = ["Kevin K. <kbknapp@gmail.com>"]
description = "A wrapper library for the DigitalOcean API v2"
license = "MIT"
repository = "https://github.com/kbknapp/doapi-rs.git"
documentation = "http://kbknapp.github.io/doapi-rs"
readme = "README.md"
keywords = ["do", "lib", "digitalocean", "digital", "ocean"]

[dependencies]
hyper = "~0.6.11"
regex = "~0.1.41"
serde_macros = "~0.5.3"
serde = "~0.5.3"
serde_json = "~0.6.0"

[features]
default = []

debug = []
unstable = []
