[package]
name = "doapi"
version = "0.1.3"
authors = ["Kevin K. <kbknapp@gmail.com>"]
description = "A wrapper library for the DigitalOcean API v2"
license = "MIT"
repository = "https://github.com/kbknapp/doapi-rs.git"
documentation = "http://kbknapp.github.io/doapi-rs"
readme = "README.md"
keywords = ["do", "lib", "digitalocean", "digital", "ocean"]

[dependencies]
hyper = "~0.7"
regex = "~0.1"
serde_macros = "0.7"
serde = "0.7"
serde_json = "0.7"
clippy = {version = "~0.0.22", optional=true}

[features]
default = ["nightly"]
lints = ["nightly", "clippy"]
nightly = []
debug = []
unstable = ["nightly", "lints"]
