[package]
name = "doapi"
version = "0.1.4"
authors = ["Kevin K. <kbknapp@gmail.com>"]
description = "A wrapper library for the DigitalOcean API v2"
license = "MIT"
repository = "https://github.com/kbknapp/doapi-rs.git"
documentation = "http://kbknapp.github.io/doapi-rs"
readme = "README.md"
keywords = ["do", "lib", "digitalocean", "digital", "ocean"]
edition = "2018"

[dependencies]
regex = "1.4.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.123"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.2.0"

[dev-dependencies]
httpmock = "0.5.5"